[package]
name = "tawatcher"
version = "0.0.1"
description = "All in one app for ActivitityWatch"
authors = ["2e3s19@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aw-server = { git = "https://github.com/ActivityWatch/aw-server-rust.git"}
aw-datastore = { git = "https://github.com/ActivityWatch/aw-server-rust.git"}
awatcher = { git = "https://github.com/2e3s/awatcher.git", branch = "make-lib"}
log = "0.4.17"
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.24"

[features]
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
